jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  selector:
    matchLabels:
      app: jellyseerr
      release: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
        release: jellyseerr
    spec:
      volumes:
      - name: jellyseerr-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/jellyseerr-config # < pvc name we created in the previous yaml
      containers:
      - image: linuxserver/jellyseerr:latest
        imagePullPolicy: Always
        name: jellyseerr
        ports:
        - containerPort: 5055
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: jellyseerr-config

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
