jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service    # < name of the service
  namespace: jellyseerr # < namespace where place the deployment and pods
spec:
  selector:
    app: jellyseerr # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 5055
