jellyseerr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingress
  namespace: jellyseerr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requests.mangelschots.org`)
      kind: Rule
      services:
        - name: jellyseerr-service
          port: 5055
  tls:
    secretName: requests-mangelschots-org-tls
